--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-.contenedorPadre {
+.contenedorPrincipal {
 background-color: rgb(199, 199, 199);
 }
 .font {
@@ -31,7 +31,7 @@ background-color: white;
 .photo {
 height: auto;
 }
-.fotoName {
+.photoName {
 float: left;
 }
 .date {
